# FTiAD-MLOps-HW1

./: .dockerignore  .dvcignore  .env  .gitignore  Dockerfile  Makefile  README.MD  README.md  docker-compose.yml  generate_grpc_code.py  pyproject.toml  run_dashboard.py  run_grpc_server.py  run_rest_api.py  task.txt
api/: __init__.py
api/grpc/: __init__.py  server.py  service.proto
api/rest/: main.py  schemas.py
api/rest/routes/: health.py  models.py
clients/: __init__.py  grpc_client.ipynb  grpc_client.py
config/: settings.py
dashboard/: app.py
models/: base.py  linear_regression.py  random_forest.py  registry.py
scripts/: init_dvc.py
storage/: __init__.py  dataset_storage.py  model_storage.py  s3_storage.py
tests/: test_base_model.py  test_model_storage.py  test_s3_storage.py
tracking/: __init__.py  mlflow_tracker.py
utils/: logger.py
