[tool.poetry]
name = "mlops-hw1"
version = "0.1.0"
description = "MLOps Homework 1 - REST and gRPC API for ML model training and inference"
authors = ["Buxieq ilni.ivanov@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = "^2.5.0"
grpcio = "^1.76.0"
grpcio-tools = "^1.76.0"
protobuf = "^6.31.1"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
numpy = "^1.26.2"
pyarrow = "^14.0.0"
streamlit = "^1.28.0"
joblib = "^1.3.2"
requests = "^2.31.0"
kagglehub = "^0.3.0"
boto3 = "^1.34.0"
dvc = {extras = ["s3"], version = "^3.48.0"}
mlflow = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
jupyter = "^1.0.0"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

